# kaserve

./: .windsurfrules  Cargo.toml  DESIGN.md  README.md  config.toml
_design/: 用 Rust 實現全新的 lighttpd 網頁伺服器.md
src/: compression.rs  config.rs  file_service.rs  main.rs  server.rs  utils.rs
src/core/: config.rs  eventloop.rs  mod.rs  server.rs
src/handlers/: common.rs  fastcgi.rs  mod.rs  static_files.rs
src/network/: connection.rs  mod.rs
src/network/http/: request.rs  response.rs
src/plugins/: api.rs  manager.rs
src/routing/: mod.rs  rewrite.rs  router.rs  vhost.rs
src/security/: acl.rs  auth.rs  mod.rs
src/utils/: compression.rs  logging.rs  metrics.rs  mod.rs
