[package]
name = "kaserve"
version = "0.1.0"
edition = "2024"
description = "靜態文件服務器，以 Rust 實作"

[dependencies]
actix-web = "4.3.1"      # HTTP 服務器框架
actix-files = "0.6.2"    # 靜態文件處理
clap = { version = "4.3.0", features = ["derive"] }  # 命令行參數解析
mime_guess = "2.0.4"     # MIME 類型檢測
flate2 = "1.0.26"        # gzip 壓縮
brotli = "3.5.0"         # brotli 壓縮
tokio = { version = "1.28.1", features = ["full"] }  # 非同步運行時
anyhow = "1.0.71"        # 錯誤處理
tracing = "0.1.37"       # 日誌記錄
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.163", features = ["derive"] }  # 序列化
chrono = "0.4.24"        # 日期與時間處理
