[package]
name = "kaserve"
version = "0.1.0"
edition = "2021"
description = "A high-performance web server inspired by lighttpd, written in Rust"
authors = ["Kaserve Team"]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"
bytes = "1.5"
http = "0.2"
h2 = "0.3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
async-trait = "0.1"
mime_guess = "2.0"
percent-encoding = "2.3"
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "trace", "compression-gzip"] }
regex = "1.10"
lazy_static = "1.4"
dashmap = "5.5"

[dev-dependencies]
reqwest = { version = "0.11", features = ["rustls-tls"] }
tempfile = "3.10"
tokio-test = "0.4"
